Added Read-Me + Updated Index.cshtml

--- a/PassionProject/PassionProject.csproj
+++ b/PassionProject/PassionProject.csproj
@@ -255,6 +255,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Assets\" />
+    <Folder Include="Content\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
